--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mui/material": "5.13.5",
-    "@mui/icons-material": "5.11.16",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.13.5",
+    "@mui/x-data-grid-generator": "^6.9.0",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "5.1.3"
   },
   "scripts": {
